fix on mobile

--- a/src/components/services/etiquettes/etiquette.scss
+++ b/src/components/services/etiquettes/etiquette.scss
@@ -35,7 +35,8 @@
     justify-content: center;
     border-radius: 8px;
     color: white;
-    width: 450px;
+    max-width: 450px;
+    width: 80vw;
     height: 100px;
     row-gap: 15px;
     padding: 10px;
